--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
+    "https": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
     "kysely": "^0.28.4",
     "nodemon": "^3.1.10",
